articles/contributors: Update contrib-develinmemoriam.po
PR:		281711
Reviewed by:	dbaio
Differential Revision: https://reviews.freebsd.org/D49564

--- a/documentation/content/en/articles/contributors/contrib-develinmemoriam.po
+++ b/documentation/content/en/articles/contributors/contrib-develinmemoriam.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2021-07-25 09:16-0300\n"
+"POT-Creation-Date: 2025-03-28 20:31-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,17 +17,134 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:3
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:2
+msgid "Mike Karels (2016 - 2024; RIP 2024)"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:6
+msgid ""
+"Mike Karels, originally a microbiology Ph.D. degree candidate at University "
+"of California Berkeley (UCB), expressed interest in computers in a nearby "
+"lab which led him to change his entire career path.  He eventually became "
+"involved in the Computer Systems Research Group (CSRG) at UCB in the early "
+"1980's.  Once there, his contributions were instrumental in the development "
+"and improvement of the BSD Unix TCP/UDP/IP implementation, including the "
+"socket interface API, one of the most widely used application programming "
+"interfaces in the history of the Internet."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:9
+msgid ""
+"Over the next several years, he continued to help prepare the Berkeley "
+"Software Distribution releases for 4.3BSD, 4.3BSD-Tahoe, 4.3BSD-Reno, "
+"Networking Release 1, and Networking Release 2.  During this time, he was "
+"one of the authors of \"The Design and Implementation of the 4.3BSD Unix "
+"Operating System\", an important book in the field of computers and "
+"operating systems, published in 1989."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:12
+msgid ""
+"After leaving the CSRG, he was a founding member of BSD Incorporated (BSDi), "
+"one of the earliest purveyors of BSD Unix software in source and binary "
+"forms.  Mike held steady through multiple organizational changes across "
+"Walnut Creek CDROM, Wind River Systems, Secure Computing, McAfee, Intel "
+"Security, and Forcepoint."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:16
+msgid ""
+"In 1994, on the occasion of the 25th anniversary of Unix, the USENIX "
+"Association honored Mike with inclusion in the Unix Deck of Cards, a set of "
+"playing cards with the faces of pioneers in the early Unix community.  He is "
+"the Seven of Spades."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:20
+msgid ""
+"He also became involved with the FreeBSD Project and contributed greatly to "
+"it over the years including additions to the sysctl subsystem, and the "
+"Mandatory Access Control (MAC) framework, eventually earning a src commit "
+"bit.  After his retirement, he stepped up to help with the release "
+"engineering of FreeBSD and was elected to serve on the core team shortly "
+"before his unexpected passing on his way home from the BSDCan 2024 "
+"Conference.  Just the previous year, he gave a delightful retrospective talk "
+"on his work with BSD at BSDCan 2023 that can be viewed on YouTube: https://"
+"www.youtube.com/watch?v=XSziyKlG1ws."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:24
+msgid ""
+"Mike is remembered as a brilliant software engineer, patient, humble and "
+"approachable to those needing help.  He enjoyed music, photography, and "
+"nature as well as spending time with his family.  A remembrance page for "
+"Mike can be found at https://www.gearty-delmore.com/obituaries/michael-mike-"
+"karels."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:25
+msgid "Hans Petter Selasky (2010 - 2023; RIP 2023)"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:31
+msgid ""
+"The FreeBSD community remembers Hans Petter Selasky who passed away in "
+"Lillesand, Norway on June 23, 2023 at the age of 41.  Hans was an incredibly "
+"brilliant and kind person, and made many valuable contributions to FreeBSD.  "
+"He was best known for re-writing and maintaining the USB stack and the "
+"webcamd package which enables modern teleconferencing on FreeBSD.  Most "
+"recently, he worked for Mellanox (now Nvidia) to support their ConnectX "
+"series of high speed NICs on FreeBSD.  Hans’s work included major "
+"contributions to the kernel TLS framework, as well as support for NIC kTLS "
+"send and receive offload in the mce(4) driver."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:34
+msgid ""
+"One example improvement was his idea to sort incoming TCP packets using the "
+"NIC provided RSS flow identifiers in order to present LRO with all packets "
+"from the same TCP connection back to back.  This idea was crucial to "
+"Netflix's ability to serve 100Gb/s of video traffic from a single machine."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:39
+msgid ""
+"Outside of FreeBSD, Hans’s hobbies included music and mathematics.  He was "
+"active in his church, and contributed to its sound team.  He was a loving "
+"and dedicated uncle to his nieces and nephews.  He loved animals, especially "
+"his cat Pumba."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:41
+msgid ""
+"A longer edition of this remembrance can be found on link:https://"
+"forums.freebsd.org/threads/in-memoriam-hans-petter-william-sirevag-"
+"selasky.89697/[this FreeBSD Forum page]."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:42
 msgid "Bruce D. Evans (1991 - 2019; RIP 2019)"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:5
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:44
 msgid "Bruce was a programming giant who made FreeBSD his home."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:7
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:46
 msgid ""
 "Back before FreeBSD and Linux there was Minix, a toy \"unix\" written by "
 "Andy Tannenbaum, released in 1987, sold with complete sources on three "
@@ -35,26 +152,26 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:9
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:48
 msgid "Bruce ported Minix to the i386 around 1989."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:11
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:50
 msgid ""
 "Linus Torvalds used Minix/386 to develop his own kernel, and Bruce was the "
 "first person he thanked in the release-announcement."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:13
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:52
 msgid ""
 "When Bill Jolitz released 386BSD 0.1 in 1992, Bruce was listed as a "
 "contributor."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:15
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:54
 msgid ""
 "Bruce co-founded the FreeBSD project, and served on core.0, but he was never "
 "partisan, and over the years many other projects have benefitted from his "
@@ -62,7 +179,7 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:17
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:56
 msgid ""
 "Code reviews from Bruce came in three flavours, \"mild\", \"brucified\" and "
 "\"brucifiction\", but they were never personal: It was always only about the "
@@ -71,7 +188,7 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:19
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:58
 msgid ""
 "As Bruce gave more code reviews than anybody else in the history of the "
 "FreeBSD project, the commit logs hide the true scale of his impact until you "
@@ -79,29 +196,29 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:21
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:60
 msgid "Being hard of hearing, Bruce did not attend conferences."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:23
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:62
 msgid ""
 "The notable exception was the 1999 BSDcon in California, where his core team "
 "colleagues greeted him with \"We're not worthy!\" in Wayne's World fashion."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:25
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:64
 msgid "Twenty years later we're still not."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:26
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:65
 msgid "Kurt Lidl (2015 - 2019; RIP 2019)"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:28
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:67
 msgid ""
 "Kurt first got involved with BSD while it was still a project at the "
 "University of California at Berkeley. Shortly after personalized license "
@@ -109,14 +226,14 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:30
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:69
 msgid ""
 "He began contributing to FreeBSD shortly after the conception of the "
 "project. He became a FreeBSD source committer in October 2015."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:32
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:71
 msgid ""
 "Kurt's most well known FreeBSD project was man:blacklistd[8] which blocks "
 "and releases ports on demand to avoid DoS abuse. He has also made many other "
@@ -125,46 +242,46 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:34
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:73
 msgid ""
-"Earlier work included the game XTank, an author on RFC 2516 https://tools."
-"ietf.org/html/rfc2516[\"A Method for Transmitting PPP Over Ethernet "
+"Earlier work included the game XTank, an author on RFC 2516 https://"
+"tools.ietf.org/html/rfc2516[\"A Method for Transmitting PPP Over Ethernet "
 "(PPPoE)\"], and the USENIX paper https://www.usenix.org/conference/usenix-"
 "winter-1994-technical-conference/drinking-firehose-multicast-usenet-"
 "news[\"Drinking from the Firehose: Multicast USENET News\"]."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:35
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:74
 msgid "Frank Durda IV (1995 - 2003; RIP 2018)"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:37
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:76
 msgid ""
 "Frank had been around the project since the very early days, contributing "
 "code to the 1.x line before becoming a committer."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:38
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:77
 msgid "Andrey A. Chernov (1993 - 2017; RIP 2017)"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:40
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:79
 msgid ""
 "Andrey contributions to FreeBSD can not be overstated. Having been involved "
 "for a long there is hardly an area which he did not touch."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:41
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:80
 msgid "Jürgen Lock (2006 - 2015; RIP 2015)"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:43
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:82
 msgid ""
 "Jürgen made a number of contributions to FreeBSD, including work on libvirt, "
 "the graphics stack, and QEMU. Jürgen's contributions and helpfulness were "
@@ -173,12 +290,12 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:44
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:83
 msgid "{alexbl} (2006 - 2011; RIP 2012)"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:46
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:85
 msgid ""
 "http://www.legacy.com/obituaries/sfgate/obituary.aspx?"
 "pid=159801494[Alexander] was best known as a major contributor to FreeBSD's "
@@ -186,12 +303,12 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:47
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:86
 msgid "{jb} (1997 - 2009; RIP 2009)"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:49
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:88
 msgid ""
 "http://hub.opensolaris.org/bin/view/Community+Group+ogb/In+Memoriam[John] "
 "made major contributions to FreeBSD, the best known of which is the import "
@@ -203,12 +320,12 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:50
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:89
 msgid "{jmz} (1994 - 2009; RIP 2009)"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:52
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:91
 msgid ""
 "http://www.obs-besancon.fr/article.php3?id_article=323[Jean-Marc] was an "
 "astrophysicist who made important contributions to the modeling of the "
@@ -220,12 +337,12 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:53
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:92
 msgid "{itojun} (1997 - 2001; RIP 2008)"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:55
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:94
 msgid ""
 "Known to everyone as http://astralblue.livejournal.com/350702.html[itojun], "
 "Jun-ichiro Hagino was a core researcher at the http://www.kame.net/[KAME "
@@ -236,12 +353,12 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:56
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:95
 msgid "{cg} (1999 - 2005; RIP 2005)"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:58
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:97
 msgid ""
 "http://www.dbsi.org/cam/[Cameron] was a unique individual who contributed to "
 "the project despite serious physical disabilities. He was responsible for a "
@@ -251,12 +368,12 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:59
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:98
 msgid "{alane} (2002 - 2003; RIP 2003)"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:60
+#: documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc:99
 msgid ""
 "http://freebsd.kde.org/memoriam/alane.php[Alan] was a major contributor to "
 "the KDE on FreeBSD group. In addition, he maintained many other difficult "
