status/2025Q1/sylve: refine formatting and package refs

--- a/website/content/en/status/report-2025-01-2025-03/sylve.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/sylve.adoc
@@ -1,4 +1,4 @@
-=== Sylve - A Unified System Management Platform for FreeBSD
+=== Sylve -- A Unified System Management Platform for FreeBSD
 
 Links: +
 link:https://github.com/AlchemillaHQ/Sylve[GitHub] URL: link:https://github.com/AlchemillaHQ/Sylve[] +
@@ -11,7 +11,7 @@ Sylve is a modern, unified system management platform for FreeBSD, inspired by P
 It intends to provide an integrated web interface for managing virtual machines (via Bhyve), Jails, ZFS storage, networking, and firewalling.
 The backend is implemented in Go, while the frontend uses SvelteKit with Tailwind CSS and ShadCN UI components.
 
-The project emphasizes a minimal system footprint, currently requiring only `smartmontools` and `tmux` as runtime dependencies.
+The project emphasizes a minimal system footprint, currently requiring only package:sysutils/smartmontools[] and package:sysutils/tmux[] as runtime dependencies.
 
 Sylve addresses a key gap in the FreeBSD ecosystem: a user-friendly, full-featured web interface for system management.
 By unifying virtualization, storage, and network management, it aims to lower the barrier for users and administrators deploying FreeBSD in complex environments.
