--- a/website/content/en/status/report-2025-01-2025-03/cfc.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/cfc.adoc
@@ -12,7 +12,8 @@ link:https://book.bsdcn.org/[FreeBSD-Ask on Website] URL: link:https://book.bsdc
 
 Contact: ykla <yklaxds@gmail.com>
 
-*FreeBSD-Ask* is an open-source FreeBSD introductory guide written in Simplified Chinese, initiated by ykla from the Chinese FreeBSD Community (CFC). *FreeBSD-Ask* was established on March 14, 2021 
+*FreeBSD-Ask* is an open-source FreeBSD introductory guide written in Simplified Chinese, initiated by ykla from the Chinese FreeBSD Community (CFC).
+*FreeBSD-Ask* was established on March 14, 2021.
 
 Updates in this quarter: 
 
