--- a/website/content/en/status/report-2025-01-2025-03/cfc.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/cfc.adoc
@@ -18,13 +18,13 @@ Contact: ykla <yklaxds@gmail.com>
 Updates in this quarter: 
 
 * Added:
-  * Installing Budgie
-  * bsdconfig System Configuration Tool
-  * Installing Fluxbox
-  * Installing IceWM
+  * Installing package:x11/budgie[]
+  * package:sysutils/bsdconfig[] System Configuration Tool
+  * Installing package:x11-wm/fluxbox[]
+  * Installing package:x11-wm/icewm[]
   * Prometheus Monitoring Deployment
-  * Fail2Ban (Based on IPFW, PF, IPF)
-  * Installing Window Maker
+  * package:security/py-fail2ban[] (Based on IPFW, PF, IPF)
+  * Installing package:x11-wm/windowmaker[]
   * Manual Dual-Boot Installation (Installing FreeBSD First)
   * Installing FreeBSD - Based on Apple M1 & Parallels Desktop 20
   * Command Line Basics
