Add errata affecting 13.4R, 13.5R 14.2R
FreeBSD-EN-25:04.tzdata affects all supported releases
FreeBSD-EN-25:05.expat affects all supported releases
FreeBSD-EN-25:06.daemon affects 14.2R and 13.4R
FreeBSD-EN-25:07.openssl affects 14.2R
FreeBSD-EN-25:08.caroot affects all supported releases

--- a/website/content/en/releases/13.5R/errata.adoc
+++ b/website/content/en/releases/13.5R/errata.adoc
@@ -52,9 +52,9 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 [width="100%",cols="40%,30%,30%",options="header",]
 |===
 |Errata |Date |Topic
-
-|No errata notices.||
-
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:04.tzdata.asc[FreeBSD-EN-25:04.tzdata] |10 April 2025 |Timezone database information update
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:05.expat.asc[FreeBSD-EN-25:05.expat] |10 April 2025 |Update expat to 2.7.1
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:08.caroot.asc[FreeBSD-EN-25:08.caroot] |10 April 2025 |Root certificate bundle update
 |===
 
 [[open-issues]]
