--- a/website/content/en/status/report-2025-01-2025-03/cfc.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/cfc.adoc
@@ -36,7 +36,7 @@ Updates in this quarter:
   * ProFTPD (Based on MySQL)
   * vsftpd
 
-* Introduced several GitHub Actions, such as automatic PDF generation, dead link checking, etc.
+* Added several GitHub Actions, such as automatic PDF generation, dead link checking, etc.
 
 As always, feedback and patches are welcome.
 
