--- a/website/content/en/status/report-2025-01-2025-03/vision-accessibility-handbook.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/vision-accessibility-handbook.adoc
@@ -21,7 +21,7 @@ Completion and review for publication are expected soon.
 Future plans include adding a Section 3 for hearing accessibility, a Section 4 for interaction accessibility, and a "Miscellaneous" chapter in Section 1 to cover general aspects.
 A discussion on this topic is available on the accessibility mailing list.
 
-Furthermore, during this quarter, the port www/edbrowse has been updated.
+Furthermore, during this quarter, the port package:www/edbrowse[] has been updated.
 This is a fully command-line web browser designed for compatibility with screen readers.
 A solution is also being developed to facilitate easy color customization for TUI utilities in the BASE system, with the potential to set high contrast directly from the system installer man:bsdinstall[8].
 
