--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -508,6 +508,8 @@ Ethernet driver for Google Virtual NIC (gVNIC) (man:gve[4] driver)
 
 &hwlist.uhso;
 
+&hwlist.ure;
+
 &hwlist.urndis;
 
 &hwlist.vge;
