Status/2025/Q1/wireless-iwx.adoc: fix a typo

--- a/website/content/en/status/report-2025-01-2025-03/wireless-iwx.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/wireless-iwx.adoc
@@ -13,7 +13,7 @@ Firmware is available thanks to mailto:bz@FreeBSD.org[bz@] in the package:net/wi
 iwx landed in FreeBSD on the final day of the quarter.
 iwx probes with a lower priority than iwlwifi to avoid breaking deployed configurations.
 
-iwx supports legacy, HT and VHT rates and some users have reported significant througputs in test.
+iwx supports legacy, HT and VHT rates and some users have reported significant throughputs in test.
 There remain many issues around rate selection and development is continuing.
 
 
