handbook/kde: Mention sysctl.conf - update file reference
Simplify description of file editing and add a reference to the sysctl.conf man page

--- a/documentation/content/en/books/handbook/desktop/_index.adoc
+++ b/documentation/content/en/books/handbook/desktop/_index.adoc
@@ -153,7 +153,7 @@ Enable D-BUS service in `/etc/rc.conf` to start at system boot:
 
 To help the desktop environment's performance, increase message sizes.
 
-Edit the `/etc/sysctl.conf` with an editor of choice, then, add the following lines:
+Add the following lines to man:sysctl.conf[5]:
 
 [source,shell]
 ....
