handbook/kde: Mention sysctl.conf - simplify
Simplify reasoning for why the sysctl message sizes tweak should be made

--- a/documentation/content/en/books/handbook/desktop/_index.adoc
+++ b/documentation/content/en/books/handbook/desktop/_index.adoc
@@ -151,7 +151,7 @@ Enable D-BUS service in `/etc/rc.conf` to start at system boot:
 # sysrc dbus_enable="YES"
 ....
 
-To help the desktop environment's performance, increase message sizes.
+KDE requires larger message sizes for optimal performance.
 
 Add the following lines to man:sysctl.conf[5]:
 
