Remove kde5 leftover.

--- a/documentation/content/en/books/handbook/desktop/_index.adoc
+++ b/documentation/content/en/books/handbook/desktop/_index.adoc
@@ -75,7 +75,7 @@ A desktop environment can range from a simple window manager to a complete suite
 
 | KDE Plasma
 | GPL 2.0 or later
-| x11/kde5
+| x11/kde
 
 | GNOME
 | GPL 2.0 or later
