--- a/website/content/en/releases/15.0R/hardware.adoc
+++ b/website/content/en/releases/15.0R/hardware.adoc
@@ -1,9 +1,9 @@
 ---
-title: FreeBSD X.0 Hardware Notes
+title: FreeBSD 15.0 Hardware Notes
 sidenav: download
 ---
 
-:localRel: X.Y
+:localRel: 15.0
 :doctype: article
 :toc: macro
 :toclevels: 2
