--- a/website/content/en/releases/15.0R/installation.adoc
+++ b/website/content/en/releases/15.0R/installation.adoc
@@ -1,12 +1,11 @@
 ---
-title: "FreeBSD X.0-RELEASE Installation Instructions"
+title: "FreeBSD 15.0-RELEASE Installation Instructions"
 sidenav: download
 ---
 
-:releaseCurrent: X.0-RELEASE
-:releasePrev: X.-1-RELEASE
-:releasePrevLegacy: X-1.Y-RELEASE
-:localRel: X.0
+:releaseCurrent: 15.0-RELEASE
+:releasePrev: 14.3-RELEASE
+:localRel: 15.0
 
 include::shared/en/urls.adoc[]
 
@@ -42,7 +41,7 @@ For Git use the releng/{localRel} branch which will be where any upcoming Securi
 == Upgrading Using "FreeBSD Update"
 
 The man:freebsd-update[8] utility supports binary upgrades of amd64, arm64, and i386 systems running earlier FreeBSD releases.
-Systems running {releasePrevLegacy} or {releasePrev} can upgrade as follows:
+Systems running {releasePrev} can upgrade as follows:
 
 [.screen]
 ----
