--- a/website/content/en/releases/15.0R/readme.adoc
+++ b/website/content/en/releases/15.0R/readme.adoc
@@ -1,13 +1,12 @@
 ---
-title: "FreeBSD X.0-RELEASE README"
+title: "FreeBSD 15.0-RELEASE README"
 sidenav: download
 ---
 
-:releaseCurrent: X.0-RELEASE
+:releaseCurrent: 15.0-RELEASE
 :releaseType: release
-:releaseBranch: X-STABLE
-:releasePrevStable: X.Y-RELEASE
-:releasePrev: X.Y-RELEASE
+:releaseBranch: 15-STABLE
+:releasePrev: 14.3-RELEASE
 
 include::shared/releases.adoc[]
 include::shared/en/urls.adoc[]
