--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1,13 +1,13 @@
 ---
-title: "FreeBSD X.0-RELEASE Release Notes"
+title: "FreeBSD 15.0-RELEASE Release Notes"
 sidenav: download
 ---
 
-:localRel: X.0
-:releaseCurrent: X.0-RELEASE
-:releaseBranch: X-STABLE
-:releasePrev: X.Y-RELEASE
-:releaseNext: X.Y-RELEASE
+:localRel: 15.0
+:releaseCurrent: 15.0-RELEASE
+:releaseBranch: 15-STABLE
+:releasePrev: 14.0-RELEASE
+:releaseNext: 15.1-RELEASE
 :releaseType: "release"
 
 include::shared/en/urls.adoc[]
