--- a/website/content/en/releases/15.0R/_index.adoc
+++ b/website/content/en/releases/15.0R/_index.adoc
@@ -1,11 +1,11 @@
 ---
-title: "FreeBSD X.0 Release Information"
+title: "FreeBSD 15.0 Release Information"
 sidenav: download
 ---
 
-:localRel: X.0
-:localBranchStable: stable/X
-:localBranchReleng: releng/X.0
+:localRel: 15.0
+:localBranchStable: stable/15
+:localBranchReleng: releng/15.0
 
 = FreeBSD {localRel} Release Information
 
