--- a/website/content/en/releases/15.0R/errata.adoc
+++ b/website/content/en/releases/15.0R/errata.adoc
@@ -1,11 +1,11 @@
 ---
-title: "FreeBSD X.0-RELEASE Errata"
+title: "FreeBSD 15.0-RELEASE Errata"
 sidenav: download
 ---
 
-:release: X.0-RELEASE
-:releaseNext: X.1-RELEASE
-:releaseBranch: X-STABLE
+:release: 15.0-RELEASE
+:releaseNext: 15.1-RELEASE
+:releaseBranch: 15-STABLE
 
 = FreeBSD {release} Errata
 
