--- a/website/content/en/releases/15.0R/schedule.adoc
+++ b/website/content/en/releases/15.0R/schedule.adoc
@@ -4,7 +4,6 @@ sidenav: download
 ---
 
 = FreeBSD {localRel} Release Process
-:localRelPrev: X.Y-1
 :localRel: 15.0
 :localBranchHead: head
 :localBranchStable: stable/15
@@ -28,28 +27,31 @@ General discussions about the pending release and known issues should be sent to
 
 == Schedule
 
-During the {localBranchHead} freeze, the Release Engineering Team may create ALPHA snapshots to publish for testing purposes.
-As the frequency and total number of the ALPHA snapshots will depend on the length of time the {localBranchHead} branch is frozen, no official schedule is provided.
-
-Announcements regarding the availability of the ALPHA snapshots will be sent to the mailto:freebsd-current@FreeBSD.org[freebsd-current] and mailto:freebsd-snapshots@FreeBSD.org[freebsd-snapshots] mailing lists.
-
 [.tblbasic]
 [cols=",,,",options="header",]
 |===
 |Action |Expected |Actual |Description
-|Initial release schedule announcement |- |XXX |Release Engineers send announcement email to developers with a rough schedule.
-|Release schedule reminder |XXX |- |Release Engineers send reminder announcement e-mail to developers with updated schedule.
-|Code slush begins |XXX |- |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
-|{localBranchReleng} branch |XXX |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
-|BETA1 builds begin |XXX |- |First beta test snapshot.
-|BETA2 builds begin |XXX |- |Second beta test snapshot.
-|BETA3 builds begin |XXX |- |Third beta test snapshot.
-|RC1 builds begin |XXX |- |First release candidate.
-|RELEASE builds begin |XXX |- |{localRel}-RELEASE builds begin.
-|RELEASE announcement |XXX |- |{localRel}-RELEASE press release.
-|{localRelPrev} EoL |XXX |- |{localRelPrev}-RELEASE no longer supported.
-|{localRel} EoL |XXX |- |{localRel}-RELEASE no longer supported.
-|{localBranchStable} EoL |XXX |- |{localBranchStable} no longer supported.
+|Initial release schedule announcement |- |7 April 2025 |Release Engineers send announcement email to developers with a rough schedule.
+|Release schedule reminder |11 July 2025 |- |Release Engineers send reminder announcement e-mail to developers with updated schedule.
+|HEAD slush begins |8 August 2025 |- |Release Engineers announce that further commits to the {localBranchHead} branch will not require explicit approval, however new features should be avoided.
+|{localBranchStable} branch |5 September 2025 |- |{localBranchStable} branch created; future release engineering proceeds on this branch.
+|ALPHA1 builds begin |5 September 2025 |- |First alpha test snapshot.
+|ALPHA2 builds begin |12 September 2025 |- |Second alpha test snapshot.
+|ALPHA3 builds begin |19 September 2025 |- |Third alpha test snapshot.
+|ALPHA4 builds begin |26 September 2025 |- |Fourth alpha test snapshot.
+|{localBranchReleng} branch |3 October 2025 |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
+|BETA1 builds begin |3 October 2025 |- |First beta test snapshot.
+|BETA2 builds begin |10 October 2025 |- |Second beta test snapshot.
+|BETA3 builds begin |17 October 2025 |- |Third beta test snapshot.
+|BETA4 builds begin |24 October 2025 |- |Fourth beta test snapshot.
+|RC1 builds begin |31 October 2025 |- |First release candidate.
+|RC2 builds begin* |7 November 2025 |- |Second release candidate.
+|RC3 builds begin* |14 November 2025 |- |Third release candidate.
+|RC4 builds begin* |21 November 2025 |- |Fourth release candidate.
+|RELEASE builds begin |28 November 2025 |- |{localRel}-RELEASE builds begin.
+|RELEASE announcement |2 December 2025 |- |{localRel}-RELEASE press release.
+|{localRel} EoL |30 September 2026 |- |{localRel}-RELEASE no longer supported.
+|{localBranchStable} EoL |31 December 2029 |- |{localBranchStable} no longer supported.
 |===
 
 "*" indicates "as-needed" items.
