--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -33,7 +33,7 @@ General information about committing to -STABLE.
 |===
 |Date |Event |Information
 |June 2025 |FreeBSD 14.3 |link:../releases/14.3R/schedule/[Target Schedule]
-|December 2025 |FreeBSD 15.0 |
+|December 2025 |FreeBSD 15.0 |link:../releases/15.0R/schedule/[Target Schedule]
 |March 2026 |FreeBSD 14.4 |
 |June 2026 |FreeBSD 15.1 |
 |September 2026 |FreeBSD 14.5 |
