--- a/website/content/en/releases/15.0R/installation.adoc
+++ b/website/content/en/releases/15.0R/installation.adoc
@@ -40,6 +40,9 @@ For Git use the releng/{localRel} branch which will be where any upcoming Securi
 [[upgrade-binary]]
 == Upgrading Using "FreeBSD Update"
 
+NOTE: FreeBSD Update is probably not going to exist in {releaseCurrent}!
+The text below is boilerplate from previous releases and should be replaced with instructions for using pkgbase once those are finalized.
+
 The man:freebsd-update[8] utility supports binary upgrades of amd64, arm64, and i386 systems running earlier FreeBSD releases.
 Systems running {releasePrev} can upgrade as follows:
 
