Add registered trademark for QEMU
Event:	Easterhegg 2025
PR:	280945
Differential Revision: https://reviews.freebsd.org/D49806

--- a/documentation/themes/beastie/i18n/en.toml
+++ b/documentation/themes/beastie/i18n/en.toml
@@ -451,5 +451,8 @@ other = "XFree86 is a trademark of The XFree86 Project, Inc."
 [daemon-news]
 other = "This article was originally published in the January 2000 issue of <a class=\"link\" href=\"http://www.daemonnews.org/\">DaemonNews</a>. This version of the article may include updates from Matt and other authors to reflect changes in FreeBSD's VM implementation."
 
+[qemu]
+other = "QEMU is a trademark of the Software Freedom Conservancy, Inc."
+
 [general]
 other = "Many of the designations used by manufacturers and sellers to distinguish their products are claimed as trademarks. Where those designations appear in this document, and the FreeBSD Project was aware of the trademark claim, the designations have been followed by the “™” or the “®” symbol."
