new committer (src): Lexi Winter (ivy)
per the committer's guide for new committers:

- add my pgp key
- add myself to shared/authors.adoc
- add myself to shared/contrib-committers.adoc
- add a news entry

Reviewed by:	kevans
Approved by:	kevens (mentor)
Differential Revision:	https://reviews.freebsd.org/D49901

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -1503,6 +1503,9 @@ include::{include-path}gbe.key[]
 === `{bnovkov}`
 include::{include-path}bnovkov.key[]
 
+=== `{ivy}`
+include::{include-path}ivy.key[]
+
 [[pgpkeys-other]]
 == Other Cluster Account Holders
 
