--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -1423,6 +1423,10 @@
 :ivoras-email: ivoras@FreeBSD.org
 :ivoras: {ivoras-name} <{ivoras-email}>
 
+:ivy-name: Lexi Winter
+:ivy-email: ivy@FreeBSD.org
+:ivy: {ivy-name} <{ivy-email}>
+
 :iwasaki-name: Mitsuru IWASAKI
 :iwasaki-email: iwasaki@FreeBSD.org
 :iwasaki: {iwasaki-name} <{iwasaki-email}>
